[tool.poetry]
name = "supplychain"
version = "0.1.0"
description = ""
authors = ["Yuhui Shi <yuhui@convect.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ortools = "^9.6.2534"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
